dep_httpd.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: httpd
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: httpd
  template: 
    metadata: 
      labels: 
        name: http
    spec: 
      containers: 
      - name: httpd
        image: gouthamc125/docker:v2
        ports: 
        - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata: 
  name: httpd 
spec: 
  type: ClusterIP
  ports: 
  - port: 80
  selector: 
    app: httpd
