dep_nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata: 
      labels: 
        app: nginx
    spec: 
      containers:
      - name: nginx
        image: gouthamc125/regna:v1
        ports:
        - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata: 
  name: nginx
spec: 
  type: ClusterIP
  ports: 
  - port: 80
  selector: 
    app: nginx
